<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".RegisterUser">

    <EditText
        android:id="@+id/fullName"
        android:drawableRight="@drawable/person"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/edittext_corner"
        android:textCursorDrawable="@drawable/cursor_color"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Enter your username"
        android:importantForAutofill="auto"
        android:autofillHints="´´@"
        android:textColorHint="#6C6C6C"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/emailAddress"
        android:drawableRight="@drawable/email"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/edittext_corner"
        android:textCursorDrawable="@drawable/cursor_color"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_email_address"
        android:textColorHint="#6C6C6C"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phone_number"
        android:drawableRight="@drawable/phone"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/edittext_corner"
        android:textCursorDrawable="@drawable/cursor_color"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_number"
        android:textColorHint="#6C6C6C"
        android:inputType="phone"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/phone"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/phone_number"
        app:layout_constraintLeft_toLeftOf="@id/phone_number" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintLeft_toLeftOf="@id/password" />

    <EditText
        android:id="@+id/password"
        android:drawableRight="@drawable/password"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/edittext_corner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_password"
        android:textColorHint="#6C6C6C"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/emailAddress"
        app:layout_constraintLeft_toLeftOf="@id/emailAddress" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="Username"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fullName"
        app:layout_constraintLeft_toLeftOf="@id/fullName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/fullName" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.2"
        android:text="@string/proceed"
        android:textColor="#351702"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>