<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/signIn"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginBottom="143dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.2"
        android:text="@string/sign_in"
        android:textColor="#351702"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif"
        android:text="Forgot password?"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/signIn"
        app:layout_constraintRight_toRightOf="@id/signIn" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:fontFamily="sans-serif"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/signIn" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:fontFamily="sans-serif"
        android:text="Don´t have an account?"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/signIn" />

    <EditText
        android:id="@+id/password"
        android:drawableRight="@drawable/password"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:background="@drawable/edittext_corner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:autofillHints="password"
        android:hint="@string/enter_your_password"
        android:textCursorDrawable="@drawable/cursor_color"
        android:autoSizeTextType="uniform"
        android:textColorHint="#6C6C6C"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/signIn"
        app:layout_constraintCircleRadius="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="Password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintLeft_toLeftOf="@id/password" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/emailAddress"
        app:layout_constraintLeft_toLeftOf="@id/emailAddress" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/email"
        android:padding="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edittext_corner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_email_address"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textColorHint="#6C6C6C"
        android:inputType="textEmailAddress"
        android:autoSizeTextType="uniform"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="68dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="@id/emailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/yangaidlogo"/>

</androidx.constraintlayout.widget.ConstraintLayout>
